--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Udacity Udagram</h1>
-    <p>High availability website deployed on AWS</p>
+    <p>It works! Udagram, Udacity</p>
 </body>
 </html>
